third_party/move/move-model/tests/sources/expressions_inference_err.exp
error: unable to infer type: `?3`
  ┌─ tests/sources/expressions_inference_err.move:7:16
  │
7 │       let f = |x|x;
  │                ^

error: unable to infer type: `?3`
  ┌─ tests/sources/expressions_inference_err.move:7:15
  │
7 │       let f = |x|x;
  │               ^^^

error: unable to infer type: `?3`
  ┌─ tests/sources/expressions_inference_err.move:7:18
  │
7 │       let f = |x|x;
  │                  ^

error: unable to infer type: `|?3|?3`
  ┌─ tests/sources/expressions_inference_err.move:7:15
  │
7 │       let f = |x|x;
  │               ^^^^

error: unable to infer type: `|?3|?3`
  ┌─ tests/sources/expressions_inference_err.move:7:11
  │
7 │       let f = |x|x;
  │           ^
